--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "nanoid-cjs",
-  "type": "module",
-  "version": "0.0.5",
+  "version": "0.0.7",
   "packageManager": "pnpm@9.1.1",
   "description": "latest nanoid, but support cjs for nodejs",
   "author": "leizhenpeng <laolei@forkway.cn>",
@@ -19,37 +18,20 @@
     "node"
   ],
   "sideEffects": false,
-  "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "require": "./dist/index.js"
-    }
-  },
   "main": "./dist/index.js",
-  "typings": "./dist/index.d.ts",
-  "types": "./dist/index.d.ts",
-  "typesVersions": {
-    "*": {
-      "*": [
-        "./dist/*",
-        "./dist/index.d.ts"
-      ]
-    }
-  },
+  "typings": "./dist/src/index.d.ts",
+  "types": "./dist/src/index.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
     "build": "ncc build src/index.ts -o dist",
     "dts": "tsc --emitDeclarationOnly",
-    "dev": "unbuild --stub",
-    "lint": "eslint .",
     "prepublishOnly": "nr build",
     "release": "bumpp && npm publish",
     "start": "esno src/index.ts",
     "test": "vitest",
-    "typecheck": "tsc --noEmit",
-    "prepare": "simple-git-hooks"
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "nanoid": "^5.0.7"
@@ -59,7 +41,7 @@
     "@antfu/ni": "^0.21.12",
     "@antfu/utils": "^0.7.8",
     "@types/node": "^20.12.12",
-    "@vercel/ncc": "^0.38.1",
+    "@vercel/ncc": "^0.36.1",
     "bumpp": "^9.4.1",
     "eslint": "^9.3.0",
     "esno": "^4.7.0",
@@ -71,11 +53,5 @@
     "unbuild": "^2.0.0",
     "vite": "^5.2.11",
     "vitest": "^1.6.0"
-  },
-  "simple-git-hooks": {
-    "pre-commit": "pnpm lint-staged"
-  },
-  "lint-staged": {
-    "*": "eslint --fix"
   }
 }
